changed collision detection, again, works *better*. Fixed Umbrella Jump bug

--- a/site/style/style.css
+++ b/site/style/style.css
@@ -1,9 +1,24 @@
 #canvainer {
-    margin: auto 33.33%;
+    margin-left: 35%;
+    margin-top: 10px;
 }
 
 #canvas {
 	border: 2px dotted black;
-	text-align: center;
 	box-shadow: 0px 0px 50px blue;
+}
+
+.textBox {
+    -webkit-font-smoothing: antialiased;
+    color: #000;
+    font: 14px "Helvetica", sans-serif;
+    margin-left: 33%;
+    margin-right: 33%;
+    border-top: 1px solid rgba(0, 0, 0, 0.15);
+    border-bottom: 1px solid rgba(0, 0, 0, 0.15);
+    text-align: center;
+
+    -webkit-box-shadow: 0px 1px 0px 0px white, inset 0px 1px 0px 0px white;
+    -moz-box-shadow: 0px 1px 0px 0px white, inset 0px 1px 0px 0px white;
+    -moz-box-shadow: 0px 1px 0px 0px white, inset 0px 1px 0px 0px white;
 }
